force-app/main/default/objects/Event_Edition_Email_Template__c/Event_Edition_Email_Template__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Use as email templates specific to an Event Edition</description>
    <label>Event Edition Email Template</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Edition Email Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>