force-app/main/default/objects/Event_Edition_Email_Template__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Display the content of the email</description>
    <inlineHelpText>Display the content of the email</inlineHelpText>
    <label>Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>