force-app/main/default/objects/Event_Edition_Email_Template__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <description>Define name of the edition</description>
    <inlineHelpText>Define name of the edition</inlineHelpText>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Event Edition Email Templates</relationshipLabel>
    <relationshipName>Event_Edition_Email_Templates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>