force-app/main/default/objects/Event_Edition_Email_Template__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <label>Email Template</label>
    <referenceTo>Email_Templates__c</referenceTo>
    <relationshipLabel>Event Edition Email Templates</relationshipLabel>
    <relationshipName>Event_Edition_Email_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>