force-app/main/default/objects/Event_Edition_Email_Template__c/fields/From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Email_Address__c</fullName>
    <description>Choose the email address from which email will be sent</description>
    <label>From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Org_Wide_From_Email_Addresses</valueSetName>
    </valueSet>
</CustomField>