force-app/main/default/objects/Event_Edition_Email_Template__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Defines subject on the Template</description>
    <inlineHelpText>Defines subject on the Template</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>