force-app/main/default/objects/Event_Edition_Email_Template__c/fields/Template_Code__c.field-meta.xml
<CustomField>
    <fullName>Template_Code__c</fullName>
    <description>Unicode to define template</description>
    <inlineHelpText>Put the Unicode to define template</inlineHelpText>
    <label>Template Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>