force-app/main/default/objects/Event_Edition_Email_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template_Code__c</columns>
    <columns>Content__c</columns>
    <columns>Edition__c</columns>
    <columns>Email_Template__c</columns>
    <columns>From_Email_Address__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>